# sdl2_cmake_vcpkg

./: CMakeLists.txt  README.md  emscripten-cmake-kit.json  vcpkg.json
src/: Main.cpp
